Stylesheets/header&footer.css
/*------------------COPYRIGHT------------------*
* ALL RIGHTS RESERVED TO VLAD BALANESCU, 2017  *
* Personal Website                             *
* NOTICE:  All  information  contained  herein *
*          is and remains  the   property   of *
*          Vlad Balanescu.  The   intellectual *
*          and technical  concepts   contained *
*          herein  are proprietary   to   Vlad *
*          Balanescu.   Dissemination  of this *
*          information   or   reproduction  of *
*          this material is strictly forbidden *
*          unless prior written  permission is *
*          obtained    from     Vlad Balanescu.*
----------------------------------------------*/


/*--minimal reset--*/

* {
    margin: 0px;
    padding: 0px;
}


/*----------general tags-------------------------*/

body {
    background-image: url("../Multimedia/Home.jpg");
    background-repeat: no-repeat;
    background-position: center center;
    background-attachment: fixed;
    background-size: 130% 200%, auto;
    -o-background-size: 130% 200%, auto;
    -moz-background-size: 130% 200%, auto;
    -webkit-background-size: 130% 200%, auto;
}


/*----------general tags-------------------------*/


/*----------Preloader-------------------------*/

#preloader {
    position: fixed;
    z-index: 1200;
    width: 100%;
    height: 100%;
    background-color: black;
}

#preloader img {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

#preloaderText {
    color: #66ffff;
    font-size: 1.5vw;
    position: absolute;
    top: 70%;
    left: 44.5%;
}


/*----------Preloader-------------------------*/


/*----------Header----------------------------*/

#header {
    width: 100%;
    height: 36px;
    background-color: #001a4d;
    position: fixed;
    z-index: 1000;
}

#logoImage, #logoImageOnHome {
    margin: 0.3vw 0vw 0vw 1vw;
    width: 10vmin;
    height: 25px;
    -webkit-transition: 0.8s;
    -moz-transition: 0.8s;
    -o-transition: 0.8s;
    -ms-transition: 0.8s;
    transition: 0.8s;
}

#logoImage:hover {
    margin-left: 1.5vw;
}

.navcontainer {
    float: right;
    margin-top: 8px;
    margin-right: 1vw;
}

.navcontainer li {
    display: inline;
    margin: 0.3vw;
}

.navcontainer li a {
    padding: 2px 10px;
    border-radius: 3px;
    color: #ffffff;
    text-decoration: none;
    text-align: center;
    font-size: 12px;
    cursor: pointer;
    font-family: "Arial Black", "Serif";
    -webkit-transition: 0.8s;
    -moz-transition: 0.8s;
    -o-transition: 0.8s;
    -ms-transition: 0.8s;
    transition: 0.8s;
}

.navcontainer li a.nocurrent:hover {
    color: #66ffff;
}

.navcontainer li a.current {
    color: #66ffff;
    font-size: 1.8vmin;
}

#submenu {
    display: none;
    margin-top: 8px;
    margin-right: 55%;
    float: right;
    border: 1px solid #000000;
    box-shadow: 3px 3px 0 #000000;
    background-color: #001a4d;
}

#submenu li {
    display: block;
    text-align: center;
}

#submenu li a:hover, #submenu #current {
    color: #66ffff;
}


/*----------Header----------------------------*/


/*----------Slide show----------------------------*/

#slide-container {
    width: 100%;
    overflow: hidden;
    box-shadow: 0px 2px #0F2157;
}


/*----------Slide show----------------------------*/


/*--Footer-------------------------------------*/

#footer {
    background-color: #001a4d;
    height: 35px;
    width: 100%;
    bottom: 0;
    margin-top: 50px;
    padding-top: 5px;
}

#footerText {
    text-align: center;
    color: white;
    text-decoration: none;
    font-family: "Arial", "Serif";
    font-size: 0.75vw;
    font-style: italic;
}

#footerText2 {
    text-align: center;
    color: white;
    text-decoration: none;
    font-family: "Arial", "Serif";
    font-size: 0.6vw;
    margin-bottom: 5px;
}

#up {
    width: 2vw;
    height: 2vw;
    float: left;
    margin: 0 0 0.2vw 1vw;
}

#up:hover {
    cursor: pointer;
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -o-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
    -webkit-transition: 0.8s;
    -moz-transition: 0.8s;
    -o-transition: 0.8s;
    -ms-transition: 0.8s;
    transition: 0.8s;
}

.accessibility, .accessibility ul {
    float: right;
    margin: 0.2vw 0.5vw;
    text-align: center;
    font-weight: bold;
    font-size: 1.5vmin;
}

.accessibility li {
    display: inline;
}

.accessibility li a {
    padding: 3px 10px;
    color: white;
    text-decoration: none;
    -webkit-transition: 0.7s;
    -moz-transition: 0.7s;
    -o-transition: 0.7s;
    -ms-transition: 0.7s;
    transition: 0.7s;
}

.accessibility li a:hover {
    color: #66ffff;
}

.accessibility .acsButton {
    color: #66ffff;
    font-size: 1.8vmin;
}


/*--Footer---------------------------------------*/

